Fixed syntax errors

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "generator-node-next",
   "version": "0.0.0",
   "description": "Cool Node.js kickstart with Backpack, Babel, CI, Eslint, Snyk and more",
-  "homepage": "",
+  "homepage": "https://github.com/sh7dm",
   "author": {
     "name": "sh7dm",
-    "email": "",
-    "url": ""
+    "email": "d3dx12.xx@gmail.com",
+    "url": "https://github.com/sh7dm/generator-node-next"
   },
   "files": [
     "generators"
