chore(package.json): fix author and project URLs

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "generator-node-next",
   "version": "0.0.5",
   "description": "Cool Node.js kickstart with Backpack, Babel, CI, Eslint, Snyk and more",
-  "homepage": "https://github.com/sh7dm",
+  "homepage": "https://github.com/sh7dm/generator-node-next",
   "author": {
     "name": "sh7dm",
     "email": "d3dx12.xx@gmail.com",
-    "url": "https://github.com/sh7dm/generator-node-next"
+    "url": "https://github.com/sh7dm"
   },
   "files": [
     "generators"
