--- a/generators/app/templates/.dockerignore
+++ b/generators/app/templates/.dockerignore
@@ -11,3 +11,6 @@ build
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+__tests__
+test
