--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "yeoman-generator"
   ],
   "devDependencies": {
+    "babel-preset-env": "^1.7.0",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
     "eslint": "^5.5.0",
