--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lint-staged": "^7.2.2",
     "nsp": "^3.2.1",
     "prettier": "^1.14.2",
+    "release-it": "^8.0.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.9.1"
   },
@@ -51,7 +52,8 @@
     "pretest": "eslint .",
     "precommit": "lint-staged",
     "test": "jest",
-    "commit": "npx git-cz"
+    "commit": "npx git-cz",
+    "release": "release-it"
   },
   "lint-staged": {
     "*.js": [
