--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nsp": "^3.2.1",
     "prettier": "^1.14.2",
     "release-it": "^8.0.1",
+    "vuepress": "^1.0.0-alpha.23",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^1.9.1"
   },
@@ -53,7 +54,9 @@
     "precommit": "lint-staged",
     "test": "jest",
     "commit": "npx git-cz",
-    "release": "release-it"
+    "release": "release-it",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "lint-staged": {
     "*.js": [
