--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
-  - v10
+  - node
+  - lts/8
   - v9
-  - v8
-  - v6
 before_install:
 # package-lock.json was introduced in npm@5
 - '[[ $(node -v) =~ ^v9.*$ ]] || [[ $(node -v) =~ ^v10.*$ ]] || npm install -g npm@latest' # skipped when using node 9 or 10
