--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
   - node
-  - lts/8
+  - lts/*
   - v9
 before_install:
 # package-lock.json was introduced in npm@5
-- '[[ $(node -v) =~ ^v9.*$ ]] || [[ $(node -v) =~ ^v10.*$ ]] || npm install -g npm@latest' # skipped when using node 9 or 10
+- '[[ $(node -v) =~ ^v9.*$ ]] || [[ $(node -v) =~ ^v10.*$ ]] || [[ $(node -v) =~ ^v11.*$ ]] || npm install -g npm@latest' # skipped when using node 9 or 10
 - npm install -g greenkeeper-lockfile
 install:
   npm i
