--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
+  "version": 2,
   "name": "generator-node-next",
-  "version": "2",
   "builds": [{ "src": "package.json", "use": "@now/static-build" }]
 }
