--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ node_js:
   - v9
 before_install:
 # package-lock.json was introduced in npm@5
-- '[[ $(node -v) =~ ^v9.*$ ]] || [[ $(node -v) =~ ^v10.*$ ]] || [[ $(node -v) =~ ^v11.*$ ]] || npm install -g npm@latest' # skipped when using node 9 or 10
+- '[[ $(node -v) =~ ^v9.*$ ]] || [[ $(node -v) =~ ^v10.*$ ]] || [[ $(node -v) =~ ^v11.*$ ]] || npm install -g npm@latest' # skipped when using node 9, 10 or 11
 - npm install -g greenkeeper-lockfile
 install:
   npm i
 before_script: greenkeeper-lockfile-update
-after_script: 
+after_script:
 - greenkeeper-lockfile-upload
 - cat ./coverage/lcov.info | coveralls
